--- a/style.css
+++ b/style.css
@@ -1,9 +1,86 @@
-
-body {background-color: rgb(209, 196, 196);}
-h1 { color: rgb(28, 37, 83);
-}
-h2 { color: steelblue;
-}
-p{ color: teal;
+body {
+  background-color: #fffbf7;
 }
 
+h1 {
+  color: #025157;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+h4 {
+  color: #46484c;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+li {
+  display: inline;
+  margin-right: 15px;
+  margin-left: 15px;
+  padding: 8px;
+}
+
+p {
+  color: #8b8b8bcc;
+  font-family: sans-serif;
+  text-align: center;
+}
+img {
+    align-self: center;
+}
+
+.header {
+  margin: 40px 20px 0px 20px;
+  font-size: 0px;
+  font-family: sans-serif;
+  height: 45px;
+  line-height: 45;
+}
+
+.header > * {
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: middle;
+  height: 100%;
+  line-height: 45px;
+}
+
+.logo > img {
+  height: 100%;
+}
+
+.navbar {
+  width: 70%;
+  text-align: center;
+  color: #025157;
+  font-weight: 500;
+}
+
+.actions {
+  width: 15%;
+  text-align: left;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.actions button {
+    color: #fff;
+    background-color: #67b54b;
+    padding: 12px 14px 12px 14px;
+    border: 0;
+    border-radius: 5px;
+}
+.contenido {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.formulario {
+    padding: 3px;
+}
+
+.formulario button {
+    background-color: #025157;
+    color: #fff;
+}
