--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 
 h1 {
   color: #025157;
-  font-family: sans-serif;
+  font-family: 'Alegreya', serif;
+  font-size: 60px;
   text-align: center;
 }
 
@@ -64,6 +65,20 @@ img {
   font-weight: 600;
 }
 
+.actions > * {
+  margin-left: 10px;
+  margin: right 10px; ;
+}
+
+.actions a {
+  color:  #67b54b;
+  text-decoration: none;
+}
+
+.actions a:hover {
+  color: #212529;
+}
+
 .actions button {
     color: #fff;
     background-color: #67b54b;
@@ -72,7 +87,7 @@ img {
     border-radius: 5px;
 }
 .contenido {
-    margin-top: 50px;
+    margin-top: 200px;
     text-align: center;
 }
 
