--- a/style.css
+++ b/style.css
@@ -4,8 +4,15 @@ body {
 
 h1 {
   color: #025157;
-  font-family: 'Alegreya', serif;
+  font-family: "Alegreya", serif;
   font-size: 60px;
+  text-align: center;
+}
+
+h3 {
+  color: #025157;
+  font-family: "Alegreya", serif;
+  font-size: 30px;
   text-align: center;
 }
 
@@ -28,7 +35,14 @@ p {
   text-align: center;
 }
 img {
-    align-self: center;
+  align-self: center;
+}
+
+.fixed-header {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  right: 0%;
 }
 
 .header {
@@ -67,11 +81,11 @@ img {
 
 .actions > * {
   margin-left: 10px;
-  margin: right 10px; ;
+  margin: right 10px;
 }
 
 .actions a {
-  color:  #67b54b;
+  color: #67b54b;
   text-decoration: none;
 }
 
@@ -80,22 +94,51 @@ img {
 }
 
 .actions button {
-    color: #fff;
-    background-color: #67b54b;
-    padding: 12px 14px 12px 14px;
-    border: 0;
-    border-radius: 5px;
+  color: #fff;
+  background-color: #67b54b;
+  padding: 12px 14px 12px 14px;
+  border: 0;
+  border-radius: 5px;
 }
 .contenido {
-    margin-top: 200px;
-    text-align: center;
+  margin-top: 200px;
+  text-align: center;
 }
 
 .formulario {
-    padding: 3px;
+  padding: 3px;
 }
 
 .formulario button {
-    background-color: #025157;
-    color: #fff;
+  background-color: #025157;
+  color: #fff;
+}
+
+.publicidad {
+  display: flex;
+  margin: 100px auto;
+  width: 70%;
+  align-items: center;
+}
+
+.publicidad p {
+  font-family: sans-serif;
+  font: size 10px;
+  color: #212529;
+  margin-left: 20px;
+}
+
+. videoexplicatorio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+. videoexplicatorio img {
+  width: 60px;
+  margin-top: 10px;
+}
+
+.textopublicidad {
+margin-left: 50px;
 }
